[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scripts/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://src/assets/images/background_menu_blue2.png" type="Texture" id=2]
[ext_resource path="res://src/assets/resources/SettingsMenuTheme.tres" type="Theme" id=3]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="MenuPanel2" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.72549 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Box" type="Sprite" parent="."]
self_modulate = Color( 0.803922, 0.803922, 0.803922, 1 )
position = Vector2( 966, 512 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="MenuPanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.72549 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.0
margin_top = -142.0
margin_right = 125.0
margin_bottom = 61.0
rect_scale = Vector2( 1.2, 1.2 )

[node name="VisualSettings" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -241.0
margin_top = -125.0
margin_right = 241.0
margin_bottom = -91.0
alignment = 1

[node name="FullScreenCheck" type="CheckBox" parent="VisualSettings"]
margin_left = 82.0
margin_right = 284.0
margin_bottom = 34.0
text = "Full Screen"

[node name="VSyncCheck" type="CheckBox" parent="VisualSettings"]
margin_left = 288.0
margin_right = 400.0
margin_bottom = 34.0
text = "VSync"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.5
margin_top = -77.5
margin_right = 240.5
margin_bottom = 77.5
size_flags_vertical = 2
size_flags_stretch_ratio = 6.17
alignment = 1

[node name="MasterVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 481.0
margin_bottom = 23.0
alignment = 1

[node name="MasterVolumeLabel" type="RichTextLabel" parent="VBoxContainer/MasterVolumeContainer"]
margin_left = 108.0
margin_right = 218.0
margin_bottom = 23.0
rect_min_size = Vector2( 110, 0 )
text = "Master"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/MasterVolumeContainer"]
margin_left = 222.0
margin_right = 372.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
min_value = -60.0
max_value = 0.0
ticks_on_borders = true

[node name="EffectsVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 481.0
margin_bottom = 64.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsVolumeLabel" type="RichTextLabel" parent="VBoxContainer/EffectsVolumeContainer"]
margin_left = 108.0
margin_right = 218.0
margin_bottom = 23.0
rect_min_size = Vector2( 110, 0 )
text = "SFX"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsVolumeSlider" type="HSlider" parent="VBoxContainer/EffectsVolumeContainer"]
margin_left = 222.0
margin_right = 372.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
min_value = -60.0
max_value = 0.0

[node name="MusicVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 481.0
margin_bottom = 105.0
alignment = 1

[node name="MusicVolumeLabel" type="RichTextLabel" parent="VBoxContainer/MusicVolumeContainer"]
margin_left = 108.0
margin_right = 218.0
margin_bottom = 23.0
rect_min_size = Vector2( 110, 0 )
text = "Music"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/MusicVolumeContainer"]
margin_left = 222.0
margin_right = 372.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
min_value = -60.0
max_value = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 123.0
margin_right = 481.0
margin_bottom = 155.0
custom_constants/separation = 40
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 141.0
margin_right = 213.0
margin_bottom = 32.0
size_flags_horizontal = 4
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 253.0
margin_right = 340.0
margin_bottom = 32.0
size_flags_horizontal = 0
text = "Apply"

[node name="SoundEffectsPlayer" type="AudioStreamPlayer" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="toggled" from="VisualSettings/FullScreenCheck" to="." method="_on_FullScreenCheck_toggled"]
[connection signal="toggled" from="VisualSettings/VSyncCheck" to="." method="_on_VSyncCheck_toggled"]
[connection signal="value_changed" from="VBoxContainer/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/EffectsVolumeContainer/EffectsVolumeSlider" to="." method="_on_EffectsVolumeSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
